Grace/tests/gibbs/errors/t129.grace
// ERROR = L0005
var num := 0x
